# FileManager-CLI

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/benchmarks/: test.hpp
src/libs/: CMakeLists.txt
src/libs/UI/: CMakeLists.txt  FileSystemUI.cpp  FileSystemUI.h
src/libs/operations/: CMakeLists.txt  FileSystemOperations.cpp  FileSystemOperations.h
